--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "toothlessgaming",
+  "homepage": "https://corycarroll.github.io/toothlessgaming/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
